--- a/package.json
+++ b/package.json
@@ -14,7 +14,6 @@
         "@popperjs/core": "^2.10.2",
         "axios": "^1.3.4",
         "bootstrap": "^5.1.3",
-        "laravel-mix": "^6.0.6",
         "lodash": "^4.17.19",
         "postcss": "^8.1.14",
         "react": "^18.2.0",
@@ -24,7 +23,10 @@
         "resolve-url-loader": "^5.0.0",
         "sass": "^1.32.11",
         "sass-loader": "^13.2.0",
-        "vue-loader": "^17.0.1"
+        "vue-loader": "^17.0.1",
+        "vite": "^3.0.2",
+        "laravel-vite-plugin": "^0.6.0",
+        "@vitejs/plugin-react": "^2.0.0"
     },
     "dependencies": {
         "dateformat": "^5.0.3",
